--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ pyjwt==2.1.0
 python-dotenv==0.19.0
 pymongo==4.3.3
 dnspython==2.3.0
+werkzeug==2.0.3
+click==8.0.4
+itsdangerous==2.0.1
+jinja2==3.0.3
