--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,14 @@
     "builds": [
         {
             "src": "api/index.py",
-            "use": "@vercel/python",
-            "config": { "runtime": "python3.9" }
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "api/index.py"
-        },
-        {
             "src": "/(.*)",
             "dest": "api/index.py"
         }
-    ]
+    ],
+    "public": true
 } 
