--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,38 @@
     ],
     "routes": [
         {
+            "src": "/auth/(.*)",
+            "dest": "api/index.py"
+        },
+        {
             "src": "/(.*)",
             "dest": "api/index.py"
         }
     ],
-    "public": true
+    "public": true,
+    "functions": {
+        "api/index.py": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    },
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PUT, DELETE, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "X-Requested-With, Content-Type, Accept, Authorization"
+                }
+            ]
+        }
+    ]
 } 
