--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,14 @@
                 {
                     "key": "Access-Control-Allow-Headers",
                     "value": "X-Requested-With, Content-Type, Accept, Authorization"
+                },
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                },
+                {
+                    "key": "Access-Control-Max-Age",
+                    "value": "86400"
                 }
             ]
         }
