--- a/vercel.json
+++ b/vercel.json
@@ -46,6 +46,22 @@
                 {
                     "key": "Access-Control-Max-Age",
                     "value": "86400"
+                },
+                {
+                    "key": "Referrer-Policy",
+                    "value": "no-referrer-when-downgrade"
+                },
+                {
+                    "key": "X-Content-Type-Options",
+                    "value": "nosniff"
+                },
+                {
+                    "key": "X-Frame-Options",
+                    "value": "DENY"
+                },
+                {
+                    "key": "X-XSS-Protection",
+                    "value": "1; mode=block"
                 }
             ]
         }
