--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,15 @@
         {
             "src": "/api/(.*)",
             "methods": ["OPTIONS"],
-            "dest": "api/index.py"
+            "dest": "api/index.py",
+            "headers": {
+                "Access-Control-Allow-Origin": "https://shiningjohci.github.io",
+                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+                "Access-Control-Allow-Headers": "Authorization, Content-Type, Accept, X-Requested-With, DNT, Referer, User-Agent",
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Max-Age": "600",
+                "Access-Control-Expose-Headers": "Content-Type, Authorization"
+            }
         },
         {
             "src": "/api/(.*)",
